[gd_scene load_steps=14 format=2]

[ext_resource path="res://HUD/Menu Page.gd" type="Script" id=1]
[ext_resource path="res://Assets/Home Page v2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Moving Clouds.png" type="Texture" id=3]
[ext_resource path="res://Assets/Button_Default.png" type="Texture" id=4]
[ext_resource path="res://Assets/Button_Hover.png" type="Texture" id=5]
[ext_resource path="res://HUD/Assets/Smoke.png" type="Texture" id=6]
[ext_resource path="res://Assets/Audio/Bamboo Forest.wav" type="AudioStream" id=7]

[sub_resource type="Animation" id=1]
resource_name = "Moving Clouds"
length = 60.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 60 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1024.42, 310.211 ), Vector2( 0, 310.211 ) ]
}

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.988889 )
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.986991, 0.20313 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
spread = 0.0
gravity = Vector3( -50, -100, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 20.0
tangential_accel_random = 1.0
angle_random = 1.0
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[node name="Menu Page" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 777.898, 310.211 )
scale = Vector2( 2.13408, 2.20505 )
z_as_relative = false
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Moving Clouds" = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -69.0
margin_right = 276.0
margin_bottom = 69.0
custom_constants/margin_left = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_right = 276.0
margin_bottom = 286.0
custom_constants/separation = 10

[node name="Play Button" type="TextureButton" parent="MarginContainer/VBoxContainer"]
pause_mode = 2
margin_right = 256.0
margin_bottom = 64.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Play Button"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0
text = "PLAY"
align = 1
valign = 1

[node name="Instructions" type="TextureButton" parent="MarginContainer/VBoxContainer"]
pause_mode = 2
margin_top = 74.0
margin_right = 256.0
margin_bottom = 138.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Instructions"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0
text = "INSTRUCTIONS"
align = 1
valign = 1

[node name="Credits" type="TextureButton" parent="MarginContainer/VBoxContainer"]
pause_mode = 2
margin_top = 148.0
margin_right = 256.0
margin_bottom = 212.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Credits"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0
text = "CREDITS"
align = 1
valign = 1

[node name="Quit Button" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_top = 222.0
margin_right = 256.0
margin_bottom = 286.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Quit Button"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "QUIT GAME"
align = 1
valign = 1

[node name="Smoke" type="Particles2D" parent="MarginContainer"]
position = Vector2( 939.82, 200.783 )
scale = Vector2( 0.1, 0.1 )
emitting = false
amount = 50
lifetime = 5.0
preprocess = 10.0
explosiveness = 0.1
randomness = 0.5
process_material = SubResource( 6 )
texture = ExtResource( 6 )

[node name="BG" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -15.0
[connection signal="pressed" from="MarginContainer/VBoxContainer/Play Button" to="." method="_on_Play_Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Instructions" to="." method="_on_Instructions_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit Button" to="." method="_on_Quit_Button_pressed"]
